# eigen2c

./: CMakeLists.txt  README.md
include/: base.hpp  matrix_decomp.h  matrix_ops.h
src/: matrix_decomp.c  matrix_ops.c
test/: matrix_aps_test.c  matrix_decomp_test.c
